--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.login.StartActivity">
+    android:background="@color/background_gray"
+    tools:context=".ui.login.LoginActivity">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -16,17 +17,23 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/startview_start_button"
-        android:layout_width="0dp"
+        android:id="@+id/loginview_google_button"
+        android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/round_green_button"
-        android:text="START"
-        android:textStyle="bold"
-        android:textColor="@android:color/white"
-        android:textSize="36sp"
+        android:topRightRadius="24dp"
+        android:topLeftRadius="24dp"
+        android:bottomRightRadius="24dp"
+        android:bottomLeftRadius="24dp"
+        android:drawableLeft="@drawable/loginview_google_logo"
+        android:paddingLeft="16dp"
+        android:paddingRight="32dp"
+        android:background="@drawable/round_white_button"
+        android:text="login with google"
+        android:textColor="@color/black"
+        android:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
