[feat] 시작, 로그인, 회원가입 기능 구현 FirebaseManager에 유저 관련 메소드 추가 둥근 버튼 백그라운드를 위한 녹색, 흰색, 회색 xml 따로 분리 시작 화면을 스플래쉬 화면으로 구성하여 해당 화면에서 로그인 여부 구분

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#2C6E49</color>
+    <color name="gray">#AFAFAF</color>
     <color name="background_gray">#F2F4F5</color>
 </resources>
