--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -40,7 +40,8 @@
             android:id="@+id/singupview_duplicate_button"
             android:layout_width="80dp"
             android:layout_height="50dp"
-            android:background="@drawable/round_green_button"
+            android:background="@drawable/round_gray_button"
+            android:enabled="false"
             android:layout_marginEnd="16dp"
             android:text="중복확인"
             android:textColor="@color/white"
@@ -59,7 +60,8 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/round_green_button"
+        android:background="@drawable/round_gray_button"
+        android:enabled="false"
         android:text="SIGN UP"
         android:textStyle="bold"
         android:textColor="@android:color/white"
