--- a/app/src/main/res/layout/home_main.xml
+++ b/app/src/main/res/layout/home_main.xml
@@ -12,6 +12,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
+        android:paddingTop="3dp"
+        android:paddingBottom="3dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,7 +21,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -27,57 +29,68 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40sp"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/textView5"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="LOGO_TEXT"
+                        android:layout_height="match_parent"
+                        android:text="LOGO"
+                        android:textColor="#000000"
+                        android:textSize="30sp"
+                        android:textStyle="bold"
                         android:visibility="visible" />
 
                     <Space
-                        android:layout_width="240dp"
+                        android:layout_width="270sp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1" />
+                        android:layout_weight="2" />
 
                     <ImageView
-                        android:id="@+id/imageView"
+                        android:id="@+id/imageView6"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
                         app:srcCompat="@drawable/ic_notifications_black_24dp" />
 
                     <ImageView
-                        android:id="@+id/imageView2"
+                        android:id="@+id/imageView3"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
+                        android:layout_weight="1"
                         app:srcCompat="@drawable/ic_notifications_black_24dp" />
 
                 </LinearLayout>
 
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp" />
+
+                <include
+                    layout="@layout/home_clock"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp" />
+
                 <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <ViewStub
-                        android:id="@+id/viewStub4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout="@layout/home_clock" />
+                    <include
+                        layout="@layout/home_cheer"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
                 </FrameLayout>
 
-                <FrameLayout
+                <Space
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <ViewStub
-                        android:id="@+id/viewStub5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout="@layout/home_cheerup" />
-                </FrameLayout>
+                    android:layout_height="15dp" />
 
                 <FrameLayout
                     android:layout_width="match_parent"
@@ -85,13 +98,24 @@
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="342dp"
                         tools:itemCount="6"
                         tools:listitem="@layout/home_recycler_view_item" />
                 </FrameLayout>
 
             </LinearLayout>
         </ScrollView>
+        <!--
+         리사이클러 뷰 - 디자인, 연결, 디바이더,
+         변수 연결
+         날짜
+         응원문구
+         이미지
+         로고
+         세세한 거리
+         -->
     </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
