[feat] ui조정, home 내부 뷰마다 기능 추가
* 커밋 너무 안해서 긴급하게 커밋
ui 조정, 시계기능 반영, 응원문구 출력,리사이클링 뷰 및 버튼 , 중첩스크롤적용

--- a/app/src/main/res/layout/home_cheer.xml
+++ b/app/src/main/res/layout/home_cheer.xml
@@ -15,15 +15,15 @@
         app:layout_constraintVertical_bias="0.5">
 
         <Button
-            android:id="@+id/button"
-            android:layout_width="400dp"
+            android:id="@+id/backgroundbutton"
+            android:layout_width="match_parent"
             android:layout_height="108sp"
+            android:background="@drawable/round_green_button"
             android:text="시작이 반이래요"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="24sp"
-            android:textStyle="bold"
-            android:background="@drawable/round_green_button"/>
+            android:textStyle="bold" />
 
     </FrameLayout>
 
