--- a/app/src/main/res/layout/home_recycler_view_item.xml
+++ b/app/src/main/res/layout/home_recycler_view_item.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="15dp"
-    android:paddingBottom="15dp">
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,17 +39,19 @@
                     android:textSize="20sp" />
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/text_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:textAlignment="textStart"
                     android:textColor="@android:color/black"
                     android:textSize="20sp"
+                    android:textStyle="bold"
                     tools:text="헬스장 가기" />
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/text_pos"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
@@ -64,13 +66,14 @@
                     android:textSize="14sp" />
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/textpos"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     android:text="성동구 마조로  12길"
                     android:textColor="#000000"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
         </LinearLayout>
@@ -81,7 +84,7 @@
             android:layout_marginRight="10dp">
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/certifiy_button"
                 android:layout_width="77dp"
                 android:layout_height="33dp"
                 android:layout_margin="0dp"
