[feat] 확인 버튼 추가 / 위치 정보 전송 추가

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -21,6 +21,21 @@
         android:layout_below="@id/map"
         android:layout_marginTop="-655dp">
 
+        <!-- 둥근 모서리 버튼 -->
+        <Button
+            android:id="@+id/roundGreenButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="18dp"
+            android:layout_marginBottom="32dp"
+            android:background="@drawable/round_green_button"
+            android:text="확인" />
+
         <!-- 검색창에 둥근 모서리 사각형 배경 -->
         <RelativeLayout
             android:layout_width="match_parent"
@@ -32,7 +47,9 @@
                 android:id="@+id/autocomplete_fragment"
                 android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
+
+
 
         </RelativeLayout>
     </RelativeLayout>
