--- a/app/src/main/res/layout/item_usergrass.xml
+++ b/app/src/main/res/layout/item_usergrass.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="24dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -10,6 +11,7 @@
         android:layout_margin="12dp"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="24dp"
+        app:cardElevation="0dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
