--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -34,7 +34,7 @@
 
         <EditText
             android:id="@+id/searchEditText"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="40dp"
@@ -79,10 +79,10 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/cardViewUserName"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="홍길동"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="32sp"
