[feat] 인증시 successdata 추가하도록 수정
그외 자잘한 ui 수정 및 응원문구 수정

--- a/app/src/main/res/layout/home_clock.xml
+++ b/app/src/main/res/layout/home_clock.xml
@@ -12,15 +12,12 @@
         tools:layout_editor_absoluteY="10dp">
 
 
-        <Button
-            android:id="@+id/backgroundbutton"
+        <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="108sp"
             android:background="@drawable/round_white_button"
-            android:text=""
-            android:textAlignment="center"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:text="" />
 
     </FrameLayout>
 
