--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,7 +35,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/imageView4"
+                        android:id="@+id/imagelogo"
                         android:layout_width="143dp"
                         android:layout_height="match_parent"
                         android:layout_margin="5dp"
@@ -48,14 +48,14 @@
                         android:layout_weight="2" />
 
                     <ImageView
-                        android:id="@+id/imageView6"
+                        android:id="@+id/imagebell"
                         android:layout_width="50dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         app:srcCompat="@drawable/ic_notifications_black_24dp" />
 
                     <ImageView
-                        android:id="@+id/imageView3"
+                        android:id="@+id/imageprofile"
                         android:layout_width="50dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -71,6 +71,8 @@
                 <include
                     android:id="@+id/includeHomeClock"
                     layout="@layout/home_clock"
+                    android:background="@drawable/round_white_button"
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
