[fix] 이미지 추가

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -52,14 +52,14 @@
                         android:layout_width="50dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        app:srcCompat="@drawable/ic_notifications_black_24dp" />
+                        app:srcCompat="@drawable/icon_bell" />
 
                     <ImageView
                         android:id="@+id/imageprofile"
                         android:layout_width="50dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        app:srcCompat="@drawable/ic_notifications_black_24dp" />
+                        app:srcCompat="@drawable/icon_user" />
 
                 </LinearLayout>
 
