--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -20,6 +20,6 @@
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="com.example.dailyfootprint.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
+        android:label="Notifications"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
