--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,6 +1,6 @@
 <resources>
     <string-array name="periods">
-        <item>무 관</item>
+        <item>자 유</item>
         <item>주 1일</item>
         <item>주 2일</item>
         <item>주 3일</item>
