--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,9 +9,9 @@
     <FrameLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="16dp"
         android:paddingTop="0dp"
         android:paddingBottom="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -49,14 +49,19 @@
 
                     <ImageView
                         android:id="@+id/imagebell"
-                        android:layout_width="50dp"
+                        android:layout_width="30dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         app:srcCompat="@drawable/icon_bell" />
 
+                    <Space
+                        android:layout_width="15dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="2" />
+
                     <ImageView
                         android:id="@+id/imageprofile"
-                        android:layout_width="50dp"
+                        android:layout_width="30dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         app:srcCompat="@drawable/icon_user" />
@@ -71,10 +76,10 @@
                 <include
                     android:id="@+id/includeHomeClock"
                     layout="@layout/home_clock"
-                    android:background="@drawable/round_white_button"
-
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/round_white_button" />
 
                 <Space
                     android:layout_width="match_parent"
@@ -90,6 +95,21 @@
                         layout="@layout/home_cheer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
+                </FrameLayout>
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp" />
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <include
+                        android:id="@+id/homeusergrass"
+                        layout="@layout/home_usergrass"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
                 </FrameLayout>
 
                 <Space
