--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -36,11 +36,11 @@
 
                     <ImageView
                         android:id="@+id/imagelogo"
-                        android:layout_width="143dp"
-                        android:layout_height="match_parent"
+                        android:layout_width="145dp"
+                        android:layout_height="40dp"
                         android:layout_margin="5dp"
                         android:layout_weight="2"
-                        app:srcCompat="@drawable/startview_logo" />
+                        app:srcCompat="@drawable/logo_word_black" />
 
                     <Space
                         android:layout_width="159dp"
