--- a/app/src/main/res/layout/home_cheer.xml
+++ b/app/src/main/res/layout/home_cheer.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <FrameLayout
+        android:id="@+id/frameLayout2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,5 +27,17 @@
             android:textStyle="bold" />
 
     </FrameLayout>
+
+    <TextView
+        android:id="@+id/textcountview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:text="테스트"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/frameLayout2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
