[fix] 오류 해결, 주석 추가

--- a/app/src/main/res/layout/activity_challenge.xml
+++ b/app/src/main/res/layout/activity_challenge.xml
@@ -45,8 +45,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="170dp"
-        android:text="챌린지 이름"
+        android:layout_marginTop="270dp"
+        android:text="이름"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -62,7 +62,7 @@
         android:layout_weight="1"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="40dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="300dp"
         android:background="@drawable/round_white_button"
         android:hint="이름을 입력하세요."
         android:paddingLeft="15dp"
@@ -77,8 +77,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="270dp"
-        android:text="위치 추가"
+        android:layout_marginTop="170dp"
+        android:text="위치"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -91,7 +91,7 @@
         android:id="@+id/searchLocationWindow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="200dp"
         android:background="@drawable/round_ivory_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
